[gd_scene load_steps=8 format=3 uid="uid://dxhlgxmc66q5u"]

[ext_resource type="Script" path="res://script/minigames/mini_games.gd" id="1_x8k3j"]
[ext_resource type="Script" path="res://script/minigames/quick_type_game.gd" id="2_pci3i"]
[ext_resource type="FontFile" uid="uid://crv230mibegw5" path="res://fonts/upceb.ttf" id="3_5ldan"]
[ext_resource type="Script" path="res://script/minigames/speech_game.gd" id="4_ipcro"]
[ext_resource type="Script" path="res://script/minigames/cal_game.gd" id="5_26vu1"]
[ext_resource type="Script" path="res://script/system_control/character_pic_control.gd" id="6_pf4ts"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dln0u"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0, 0, 0, 0.662745)

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="mini_games" type="PanelContainer" parent="." groups=["minigames"]]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 75.0
offset_right = 960.0
offset_bottom = 581.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dln0u")
script = ExtResource("1_x8k3j")

[node name="quick_type_game" type="VBoxContainer" parent="mini_games"]
process_mode = 4
visible = false
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("2_pci3i")

[node name="question_text" type="Label" parent="mini_games/quick_type_game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="show_text" type="HBoxContainer" parent="mini_games/quick_type_game"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="mini_games/quick_type_game/show_text"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label2" type="Label" parent="mini_games/quick_type_game/show_text"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label3" type="Label" parent="mini_games/quick_type_game/show_text"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="choices" type="HBoxContainer" parent="mini_games/quick_type_game"]
layout_mode = 2
theme_override_constants/separation = 102
alignment = 1

[node name="win_count" type="HBoxContainer" parent="mini_games/quick_type_game"]
layout_mode = 2
alignment = 1

[node name="counter" type="Label" parent="mini_games/quick_type_game/win_count"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Label2" type="Label" parent="mini_games/quick_type_game/win_count"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "/"

[node name="max" type="Label" parent="mini_games/quick_type_game/win_count"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "4"

[node name="timer_show" type="ProgressBar" parent="mini_games/quick_type_game"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="order" type="Label" parent="mini_games/quick_type_game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 35
text = "จงเรียงคำให้ตรงกับประโยคข้างบนซะ! เอ้า! กดปุ่มเร็ว"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="speech_game" type="VBoxContainer" parent="mini_games"]
process_mode = 4
visible = false
layout_mode = 2
theme_override_constants/separation = 30
script = ExtResource("4_ipcro")

[node name="question_text" type="Label" parent="mini_games/speech_game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="ans" type="HBoxContainer" parent="mini_games/speech_game"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="you_say" type="Label" parent="mini_games/speech_game/ans"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 35
text = "คุณพูดว่า: "
horizontal_alignment = 2

[node name="show_answer" type="Label" parent="mini_games/speech_game/ans"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 35
text_overrun_behavior = 3

[node name="win_show" type="HBoxContainer" parent="mini_games/speech_game"]
layout_mode = 2
alignment = 1

[node name="win_count" type="Label" parent="mini_games/speech_game/win_show"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="label" type="Label" parent="mini_games/speech_game/win_show"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "/"

[node name="win_max" type="Label" parent="mini_games/speech_game/win_show"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "3"

[node name="show_buttton" type="HBoxContainer" parent="mini_games/speech_game"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="mini_games/speech_game/show_buttton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 40
text = "กด"

[node name="button_to_start" type="Label" parent="mini_games/speech_game/show_buttton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 40
text = "[โหลดแปป]"

[node name="Label2" type="Label" parent="mini_games/speech_game/show_buttton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 40
text = "เพื่อเริ่มพูด"

[node name="mistake_bar" type="ProgressBar" parent="mini_games/speech_game"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="order" type="Label" parent="mini_games/speech_game"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 35
text = "ไหนลองพูดประโยคข้างบนสุดให้ชัดๆซิ"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="cal_game" type="VBoxContainer" parent="mini_games"]
process_mode = 4
visible = false
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("5_26vu1")

[node name="question" type="HBoxContainer" parent="mini_games/cal_game"]
layout_mode = 2
alignment = 1

[node name="num1" type="Label" parent="mini_games/cal_game/question"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 75
text = "?"

[node name="arth_sign" type="Label" parent="mini_games/cal_game/question"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 75
text = "+"

[node name="num2" type="Label" parent="mini_games/cal_game/question"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 75
text = "?"

[node name="key4" type="Label" parent="mini_games/cal_game/question"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 75
text = "= ?"

[node name="choices" type="HBoxContainer" parent="mini_games/cal_game"]
layout_mode = 2
theme_override_constants/separation = 102
alignment = 1

[node name="win_count" type="HBoxContainer" parent="mini_games/cal_game"]
layout_mode = 2
alignment = 1

[node name="counter" type="Label" parent="mini_games/cal_game/win_count"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Label2" type="Label" parent="mini_games/cal_game/win_count"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "/"

[node name="max" type="Label" parent="mini_games/cal_game/win_count"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "4"

[node name="timer_show" type="ProgressBar" parent="mini_games/cal_game"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="order" type="Label" parent="mini_games/cal_game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5ldan")
theme_override_font_sizes/font_size = 35
text = "คิดเลขเร็ว! กดปุ่มเพื่อเลือกคำตอบ!"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="character_left" type="HBoxContainer" parent="."]
visible = false
layout_direction = 1
layout_mode = 0
offset_left = -10.0
offset_top = 222.0
offset_right = 201.0
offset_bottom = 645.0
alignment = 2
script = ExtResource("6_pf4ts")

[node name="character_pic" type="TextureRect" parent="character_left"]
layout_mode = 2
expand_mode = 3

[node name="character_right" type="HBoxContainer" parent="."]
visible = false
layout_direction = 1
layout_mode = 0
offset_left = 945.0
offset_top = 222.0
offset_right = 1156.0
offset_bottom = 645.0
alignment = 2
script = ExtResource("6_pf4ts")

[node name="character_pic" type="TextureRect" parent="character_right"]
layout_mode = 2
expand_mode = 3
